phpapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpapp
  labels:
    app: phpapp
spec:
  selector:
    matchLabels:
      app: phpapp
  template:
    metadata:
      labels:
        app: phpapp
    spec:
      containers:
        - name: pfw2
          image: pchmykh/pfw2:latest
          ports:
            - containerPort: 80
