service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfw2service
  labels:
    app: phpapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: phpapp
