ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pfw2ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "*.us-east-1.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/index.php" #?
        backend:
          service:
            name: pfw2service
            port:
              number: 80
